Add styling to table; Add new form to add row

--- a/src/app/components/App.sass
+++ b/src/app/components/App.sass
@@ -1,7 +1,37 @@
 .header
-  color: red
+  color: #337ab7
   text-align: center
 
 .tableDiv
   float: none
   max-width: 90vw
+
+.react-bs-table-add-btn
+  margin: 10px
+
+.sort-column
+  min-width: 60px
+  tr
+    th
+      min-width: 60px
+
+  // Whole Container
+//.react-bs-table-container
+
+//.react-bs-table
+
+
+//header
+.react-bs-container-header
+  th
+    min-width: 100px
+  // display: table-cell
+
+// td
+.react-bs-container-body
+  color: darkslategrey
+  min-width: 60px
+
+
+.pagination > .active> a
+  z-index: 0
